@@ -5,7 +5,7 @@ includedir=@includedir@
 
 Name: libpanel-applet-2
 Description: libpanel-applet-2
-Requires: gconf-2.0 gtk+-2.0 libgnomeui-2.0 libbonoboui-2.0
+Requires: gconf-2.0 gtk+-2.0 libbonoboui-2.0
 Version: @VERSION@
 Libs: ${pc_top_builddir}/${pcfiledir}/libpanel-applet-2.la
 Cflags: -I${pc_top_builddir}/${pcfiledir}
