@@ -1,5 +1,10 @@
 2008-12-09  Vincent Untz  <vuntz@gnome.org>
 
+	* configure.in: libpanel-applet doesn't need gdk-pixbuf, and doesn't
+	need libgnomeui anymore; wncklet applets don't need gdk-pixbuf
+
+2008-12-09  Vincent Untz  <vuntz@gnome.org>
+
 	* configure.in: remove help/de/
 
 2008-12-08  Vincent Untz  <vuntz@gnome.org>
